--- a/styles/ui-kit.scss
+++ b/styles/ui-kit.scss
@@ -37,6 +37,7 @@
 .h1 {
   font-family: var(--font-bold);
   font-size: var(--h1);
+  text-align: center;
 }
 
 .h2 {
@@ -54,6 +55,7 @@
 .p1 {
   font-family: var(--font);
   font-size: var(--p1);
+  text-align: center;
 }
 
 .p2 {
