--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,9 @@ body.dark .btn-second {
 body.dark .header--mobile {
   background-color: var(--black);
 }
+body.dark .swiper-slide {
+  border: 1px solid var(--white);
+}
 
 .header {
   margin-top: 40px;
@@ -150,9 +153,15 @@ body.dark .header--mobile {
   .header__left-part {
     gap: 16px;
   }
+  .header__right-part {
+    margin-left: 8px;
+  }
   .header__right-part_btns,
   .header__right-part {
     gap: 8px;
+  }
+  .header__right-part_btns button {
+    white-space: nowrap;
   }
 }
 @media screen and (max-width: 650px) {
@@ -166,6 +175,9 @@ body.dark .header--mobile {
   .header__right-part_btns,
   .header__right-part {
     gap: 8px;
+  }
+  .header__right-part {
+    margin-left: 0;
   }
   .header .header__nav-btn {
     display: block;
@@ -198,6 +210,7 @@ body.dark .header--mobile {
   }
   .header__right-part_btns button {
     flex-grow: 1;
+    white-space: nowrap;
   }
   .header--mobile {
     position: absolute;
@@ -205,6 +218,7 @@ body.dark .header--mobile {
     height: 100%;
     margin-top: 0;
     padding-top: 40px;
+    z-index: 10;
   }
   .header--mobile .language-selection {
     display: flex;
@@ -250,5 +264,595 @@ body.dark .header--mobile {
     flex-direction: column;
     gap: 8px;
     align-items: center;
+  }
+}
+.main-phase {
+  margin-bottom: 6px;
+}
+
+.phrase-container {
+  width: 100%;
+  height: 55px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.phrase-wrapper {
+  position: absolute;
+  top: -100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: top 0.5s ease-in-out;
+}
+
+.dynamic-phrase {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+@keyframes slideInOut {
+  0% {
+    top: -100%;
+    opacity: 0;
+  }
+  10% {
+    top: 0;
+    opacity: 1;
+  }
+  50% {
+    top: 0;
+    opacity: 1;
+  }
+  60% {
+    top: 100%;
+    opacity: 0;
+  }
+  100% {
+    top: 100%;
+    opacity: 0;
+  }
+}
+.main__btn-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.decorative-blur__1 {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-45%);
+  z-index: -1;
+}
+
+@media screen and (max-width: 650px) {
+  .phrase-container {
+    height: 80px;
+  }
+}
+.get-the-app__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.get-the-app__left {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 490px;
+}
+
+.get-the-app__span {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 850px) {
+  .get-the-app__wrapper {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 60px;
+  }
+  .get-the-app__span {
+    display: none;
+  }
+}
+.how-it-works__span {
+  display: block;
+}
+
+.how-it-works__wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+  position: relative;
+}
+
+.how-it-works__wrapper > * {
+  flex: 1;
+}
+
+.how-it-works__wrapper::after {
+  content: "";
+  background: var(--gradient);
+  height: 2px;
+  width: 80%;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  z-index: -1;
+}
+
+.how-it-works__step {
+  max-width: 235px;
+}
+
+.how-it-works__step_number {
+  color: var(--white);
+  background: var(--gradient);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+
+.how-it-works__h3 {
+  margin-bottom: 8px;
+}
+
+@media screen and (max-width: 650px) {
+  .how-it-works__wrapper {
+    flex-direction: column;
+    gap: 60px;
+  }
+  .how-it-works__step {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    max-width: 100%;
+  }
+  .how-it-works__wrapper::after {
+    transform: rotate(90deg);
+    transform-origin: left center;
+    left: 20px;
+    width: 370px;
+  }
+  .how-it-works__step_number {
+    flex-shrink: 0;
+  }
+  .how-it-works__h3 {
+    font-size: 16px;
+  }
+  .how-it-works__p2 {
+    font-size: 14px;
+  }
+}
+.price {
+  background: var(--gradient);
+  color: var(--white);
+  padding: 40px 0;
+}
+
+.price__span {
+  display: block;
+}
+
+.price__wrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.price__item {
+  padding: 20px;
+  border: 1px solid var(--white);
+  border-radius: 6px;
+  max-width: 320px;
+  width: 33.3333%;
+  height: 145px;
+}
+
+.price__h3 {
+  margin-bottom: 8px;
+}
+
+.price__itself_container.price__free {
+  font-size: 36px;
+  margin-bottom: 16px;
+}
+
+.price__subtext {
+  font-size: 10px;
+}
+
+.price__itself_container {
+  display: flex;
+  align-items: flex-start;
+  gap: 2px;
+  font-size: 64px;
+}
+.price__itself_container span {
+  font-size: 24px;
+}
+
+.price__item_popular {
+  background: rgba(255, 255, 255, 0.3);
+  position: relative;
+}
+
+.span__popular-tag {
+  text-transform: uppercase;
+  font-family: var(--font-bold);
+  font-size: 12px;
+  background-color: var(--black);
+  padding: 10px 20px 5px;
+  border-radius: 130px;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 850px) {
+  .price__span {
+    margin-bottom: 20px;
+  }
+  .price__wrapper {
+    flex-direction: column;
+  }
+  .price__item {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+.wmud__span {
+  display: block;
+}
+
+.wmud__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.wmud__img {
+  order: 2;
+  position: relative;
+  width: 33.333%;
+}
+.wmud__img img {
+  width: 100%;
+  height: auto;
+}
+
+.wmud {
+  background-image: url("../img/blur_1.svg");
+  background-repeat: no-repeat;
+  background-position: center 20%;
+  background-size: 500px;
+}
+
+.wmud__item-left,
+.wmud__item-right {
+  max-width: 320px;
+  width: 33.3333%;
+}
+
+.wmud__item-right {
+  order: 3;
+}
+
+.wmud__first {
+  margin-bottom: 30%;
+}
+
+.wmus__item_wrapper-icon {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 12px;
+}
+
+.wmud__third {
+  margin-top: 20%;
+  margin-bottom: 40%;
+}
+
+@media (max-width: 650px) {
+  .wmud {
+    background-position: center bottom 10%;
+    background-size: 100%;
+  }
+  .wmud__img,
+  .wmud__item-right {
+    order: unset;
+  }
+  .wmud__wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .wmud__item-left,
+  .wmud__item-right {
+    max-width: unset;
+    width: 100%;
+  }
+  .wmud__third,
+  .wmud__first {
+    margin: 0;
+  }
+  .wmud__first,
+  .wmud__item-left,
+  .wmud__third {
+    margin-bottom: 20px;
+  }
+  .wmud__item-right {
+    margin-bottom: 40px;
+  }
+  .wmud__img {
+    width: 80%;
+  }
+  .wmud__blur {
+    top: unset;
+  }
+}
+.map__info-wrapper {
+  text-align: center;
+}
+
+.map__span {
+  display: block;
+}
+
+#map {
+  width: 100%;
+  height: 308px;
+}
+
+@media (max-width: 650px) {
+  #map {
+    width: 100%;
+    height: 390px;
+  }
+}
+.downoad-app__top {
+  color: var(--white);
+  background: var(--gradient);
+  margin-bottom: 20px;
+}
+
+.download-app__info-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
+  padding-bottom: 40px;
+  padding-top: 40px;
+  background: url("../img/bottle__download-app.png");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: contain;
+}
+
+.download-app__info {
+  max-width: 505px;
+}
+
+.download-app__h2 {
+  margin-bottom: 16px;
+}
+
+.swiper {
+  width: 1680px;
+  overflow: unset;
+}
+
+.download-app__bottom_wrapper {
+  overflow: hidden;
+}
+
+.swiper-slide {
+  border: 1px solid var(--black);
+  border-radius: 6px;
+  max-width: 320px;
+  padding: 20px;
+  height: 100%;
+  max-height: 120px;
+}
+
+.download-app__h3 {
+  margin-bottom: 4px;
+  white-space: nowrap;
+  font-size: 18px;
+  overflow: hidden;
+}
+
+.swiper-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.download-app__bottom_container {
+  position: relative;
+}
+
+.download-app__img {
+  position: absolute;
+  margin-top: -28%;
+  left: 0;
+  z-index: 2;
+}
+
+@media (max-width: 1000px) {
+  .download-app__info-wrapper {
+    justify-content: flex-start;
+  }
+  .download-app__img {
+    margin-top: 0;
+    max-height: 300px;
+    display: none;
+  }
+  .download-app__p2 {
+    max-width: 400px;
+  }
+}
+@media (max-width: 650px) {
+  .download-app__info-wrapper {
+    height: 420px;
+    align-items: flex-start;
+    background-size: 40%;
+    background-position: bottom right -20px;
+  }
+  .download-app__links {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 8px;
+  }
+  .download-app__img {
+    margin-top: -170px;
+    max-height: 300px;
+    display: block;
+  }
+  .swiper-slide {
+    height: 130px;
+  }
+}
+@media (max-width: 480px) {
+  .download-app__info-wrapper {
+    background-size: 200px;
+    background-position: bottom -55px right -30px;
+  }
+}
+.form__h2,
+.form__p2,
+label {
+  color: var(--black);
+}
+
+.form__span {
+  display: block;
+}
+
+.form__outer-wrapper {
+  background-color: var(--white);
+  border-radius: 6px;
+  padding: 40px;
+  position: relative;
+  max-width: 660px;
+}
+
+.blur__2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  width: 90vw;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.input-text {
+  width: 100%;
+}
+
+label {
+  display: flex;
+  align-items: flex-start;
+  font-size: 10px;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+  gap: 8px;
+}
+
+.input__wrapper-first {
+  margin-bottom: 8px;
+}
+
+.input__wrapper-second {
+  margin-bottom: 12px;
+}
+
+.input__wrapper {
+  position: relative;
+  transition: all 0.5s ease;
+}
+
+.input__error {
+  color: var(--red);
+  font-size: 8px;
+  position: absolute;
+  right: 4px;
+  bottom: 4px;
+  display: none;
+}
+
+.input__wrapper-error {
+  border: 1px solid var(--red);
+  border-radius: 6px;
+}
+
+.input__wrapper-validate {
+  border: 1px solid var(--green);
+  border-radius: 6px;
+}
+
+.input__wrapper-error .input__error {
+  display: block;
+}
+
+.input__wrapper-validate .input__error {
+  display: none;
+}
+
+.form__btn {
+  width: 100%;
+  padding: 10px 0;
+}
+
+.section_form .container {
+  position: relative;
+}
+
+.form__img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+@media (max-width: 850px) {
+  .form__outer-wrapper {
+    max-width: 100%;
+    margin-bottom: 60px;
+  }
+  .form__img {
+    position: unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 49px;
+  }
+}
+@media (max-width: 650px) {
+  .form__outer-wrapper {
+    margin-bottom: 40px;
+    padding: 20px;
   }
 }/*# sourceMappingURL=index.css.map */
