--- a/styles/ui-kit.css
+++ b/styles/ui-kit.css
@@ -27,6 +27,7 @@
 .h1 {
   font-family: var(--font-bold);
   font-size: var(--h1);
+  text-align: center;
 }
 
 .h2 {
@@ -44,6 +45,7 @@
 .p1 {
   font-family: var(--font);
   font-size: var(--p1);
+  text-align: center;
 }
 
 .p2 {
