--- a/styles/index.css
+++ b/styles/index.css
@@ -799,7 +799,7 @@ label {
   color: var(--red);
   font-size: 8px;
   position: absolute;
-  right: 4px;
+  right: 80px;
   bottom: 4px;
   display: none;
 }
@@ -849,10 +849,528 @@ label {
     justify-content: center;
     padding-right: 49px;
   }
+  .input__error {
+    right: 4px;
+  }
 }
 @media (max-width: 650px) {
   .form__outer-wrapper {
     margin-bottom: 40px;
     padding: 20px;
   }
+}
+.contacts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contacts__social {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-bottom: 16px;
+}
+
+.contacts__communication {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer {
+  color: var(--white);
+  padding-top: 40px;
+  padding-bottom: 11px;
+  background: var(--gradient);
+}
+
+.footer__bottom {
+  padding-top: 12px;
+  border-top: 1px solid var(--white);
+  font-size: 12px;
+  margin-top: 40px;
+}
+.footer__bottom .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer__bottom_right {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer_payments_logos {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.footer__right_logos {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  gap: 28px;
+}
+
+.footer__right {
+  display: flex;
+  gap: 190px;
+}
+
+.footer__right_links {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.footer__left {
+  display: flex;
+  align-items: flex-end;
+  gap: 16px;
+  flex-direction: column;
+}
+
+.footer__left_communication {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 4px;
+}
+
+.footer__download-links {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 1000px) {
+  .footer__right {
+    gap: 80px;
+  }
+}
+@media (max-width: 850px) {
+  .footer__bottom .container {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+@media (max-width: 850px) {
+  .footer .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+  .footer__right {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+  .footer__right_logos {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__right_links {
+    align-items: center;
+  }
+  .footer__left {
+    align-items: center;
+  }
+  .footer__left_communication {
+    align-items: center;
+  }
+  .footer__download-links {
+    flex-direction: column;
+    gap: 6px;
+  }
+  .footer__bottom_right {
+    flex-direction: column;
+    gap: 8px;
+  }
+  .footer__bottom {
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+}
+.business__main_wrapper {
+  position: relative;
+  display: flex;
+}
+
+.business__main_wrapper-left {
+  max-width: 660px;
+  display: flex;
+  gap: 136px;
+  flex-direction: column;
+}
+
+.business__main_h1 {
+  text-align: left;
+  margin-bottom: 16px;
+}
+
+.business__main_p1 {
+  text-align: left;
+  margin-bottom: 32px;
+}
+
+.business__main_info {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.business__main_contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.business_contacts__communication {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+}
+
+.business_contacts__social {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.business__main_img {
+  width: 50%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.business__main {
+  background-image: url("../img/blur__2.svg");
+  background-repeat: no-repeat;
+  background-size: 600px;
+  background-position: center right 20%;
+}
+
+.business__main_blur {
+  position: absolute;
+  right: -50%;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: -1;
+}
+
+@media (max-width: 1000px) {
+  .business__main_wrapper-left {
+    max-width: 332px;
+  }
+}
+@media (max-width: 650px) {
+  .business__main_img {
+    position: unset;
+  }
+  .business__main_wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+  }
+  .business__main_h1,
+  .business__main_p1 {
+    text-align: center;
+  }
+  .business__main_info {
+    align-items: center;
+  }
+  .business__main_wrapper-left {
+    gap: 40px;
+  }
+  .business__main_contacts {
+    align-items: center;
+  }
+  .business_contacts__communication {
+    align-items: center;
+  }
+  .business__main {
+    background-position: center bottom 10%;
+  }
+}
+.counts__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 18px;
+}
+
+.counts__wrapper_item {
+  max-width: 155px;
+}
+
+.counts__h3 {
+  margin-bottom: 4px;
+  background: var(--gradient);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+@media (max-width: 850px) {
+  .counts__h2 {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 850px) {
+  .counts__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+  }
+  .counts__wrapper_item {
+    max-width: 100%;
+  }
+  .counts__h3 {
+    font-size: 20px;
+  }
+}
+.places__span {
+  display: block;
+}
+
+.places__h2 {
+  margin-bottom: 20px;
+}
+
+.places__p2 {
+  max-width: 830px;
+  margin-bottom: 40px;
+}
+
+.places__img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.places__img_static {
+  transition: opacity 0.4s ease-in-out;
+}
+
+.places__img_dynamic {
+  position: absolute;
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.places__item:hover .places__img_static {
+  opacity: 0;
+}
+
+.places__item:hover .places__img_dynamic {
+  opacity: 1;
+}
+
+.places__h3 {
+  transition: background 0.4s ease-in-out, color 0.4s ease-in-out;
+}
+
+.places__item:hover .places__h3 {
+  background: var(--gradient);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+.places__wrapper {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 40px 20px;
+}
+
+.places__item {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  text-align: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+@media (max-width: 650px) {
+  .places__wrapper {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+  }
+  .places__img {
+    width: 50%;
+  }
+}
+.faq__span {
+  display: block;
+}
+
+.faq__h2 {
+  margin-bottom: 60px;
+}
+
+.faq__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.faq__item {
+  padding-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+.faq__item::before {
+  content: "";
+  background: var(--gradient);
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.faq__item_top-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  cursor: pointer;
+  gap: 8px;
+}
+
+.faq__h3 {
+  max-width: 830px;
+  margin-bottom: 20px;
+  transition: background 0.3s ease, -webkit-background-clip 0.3s ease, -webkit-text-fill-color 0.3s ease;
+  background: black;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.faq__answer {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out, padding 0.3s ease-in-out;
+}
+
+.faq__btn {
+  transition: transform 0.3s ease;
+}
+
+.faq__item.active .faq__btn {
+  transform: rotate(180deg);
+}
+
+.faq__item.active .faq__h3 {
+  background: var(--gradient);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.faq__item.active .faq__answer {
+  max-height: 200px;
+  padding-top: 10px;
+}
+
+@media (max-width: 650px) {
+  .faq__item {
+    padding-bottom: 12px;
+  }
+  .faq__item.active .faq__answer {
+    padding-top: 0;
+  }
+  .faq__h3 {
+    margin-bottom: 12px;
+  }
+  .faq__h2 {
+    margin-bottom: 40px;
+  }
+  .faq__btn {
+    flex-shrink: 0;
+  }
+}
+.form__success {
+  position: fixed;
+  background: rgba(33, 30, 30, 0.5);
+  z-index: 9999;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+.form__success.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.form__success_wrapper {
+  background: var(--white);
+  padding: 40px;
+  border-radius: 6px;
+  position: relative;
+}
+
+.form__success_close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
+
+.form__success_wrapper-inner {
+  text-align: center;
+  max-width: 490px;
+}
+
+.form__success_h2 {
+  margin-bottom: 20px;
+}
+
+.form__success_p2 {
+  margin-bottom: 40px;
+}
+
+.form__success_btn {
+  width: 320px;
+}
+
+@media (max-width: 650px) {
+  .form__success_close {
+    display: none;
+  }
+  .form__success_wrapper {
+    padding: 20px;
+    margin: 0 40px;
+  }
+  .form__success_wrapper-inner {
+    max-width: unset;
+  }
+}
+html {
+  scroll-behavior: smooth;
 }/*# sourceMappingURL=index.css.map */
